Fixed spacing of first slide/ and turnkey spelling

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -476,6 +476,15 @@ z-index: 1;
     font-weight: $fontMedium;
 }
 
+#about .slide #first-slide-text { 
+    text-align: center;
+    max-width: max-content;
+}
+
+#about .slide #first-slide-text p {
+    padding-top: 40%;
+}
+
 .about-list li {
     color: #fff;
     font-size: 2.8rem;
@@ -935,6 +944,13 @@ z-index: 1;
         top: 40%;
         text-align: center;
     }
+}
+
+/*Screens 1200px and above*/
+@media only screen and (min-width: 1500px) {
+    .img-slider .slide .info p {
+        padding-left: 35%;
+     }
 }
 
 //KeyFrame code starts here
